// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton component should render button 1`] = `
<IconButton__IconButtonStyle
  disabled={false}
  onClick={[MockFunction]}
>
  <IconButton__ImageStyle
    alt="Settings Icon"
    src="test-file-stub"
  />
</IconButton__IconButtonStyle>
`;

exports[`IconButton component should render image inside button 1`] = `
<IconButton__ImageStyle
  alt="Settings Icon"
  src="test-file-stub"
/>
`;
